Theme update Fixed treeview items from jumping around by specifying a separator.

--- a/Theme/Chicago95/gtk-3.0/gtk-treeviews.css
+++ b/Theme/Chicago95/gtk-3.0/gtk-treeviews.css
@@ -55,3 +55,8 @@ treeview.view:selected {
 /* Hey Windows95 didn't have arrows in the headerbar either! */
 treeview.view image {
   color: transparent; }
+
+/* Have to specify this or else bad things happen! */
+treeview.view.separator {
+  min-height: 8px;
+  color: @border_dark; }
